# d3d-opencl-compare

./: .gitignore  CMakeLists.txt  README.md
src/: backend_api.h  cc_d3d11.h  cc_d3d12.h  cc_opencl.h  color_conv.h  color_types.h  colorconv_common.h  d3d12_resource_helpers.h  main.cpp
src/backends/: cc_d3d11.cpp  cc_d3d11_r32.cpp  cc_d3d11_r8.cpp  cc_d3d12.cpp  cc_opencl.cpp
